[project]
name = "tifa"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "twocucao", email = "twocucao@gmail.com" }
]
dependencies = [
    "fastapi>=0.110.0",
    "ipython>=8.22.2",
    "pandas>=2.2.1",
    "aiofiles>=23.2.1",
    "tenacity>=8.2.3",
    "gunicorn>=21.2.0",
    "celery>=5.3.6",
    "aiohttp>=3.9.3",
    "sqlalchemy[asyncio]>=2.0.28",
    "loguru>=0.7.2",
    "aiobotocore>=2.12.1",
    "aiomysql>=0.2.0",
    "aioredis>=2.0.1",
    "greenlet>=3.0.3",
    "jinja2>=3.1.3",
    "orjson>=3.9.15",
    "passlib>=1.7.4",
    "pillow>=10.2.0",
    "pydantic>=2.6.4",
    "pydantic-core>=2.16.3",
    "pydantic-settings>=2.2.1",
    "alembic>=1.13.1",
    "asyncer>=0.0.5",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "requests>=2.31.0",
    "rich>=13.7.1",
    "typer>=0.9.0",
    "uvicorn>=0.28.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
fastcli = 'tifa.cli.cli:app'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.2",
    "pytest>=8.1.1",
    "mypy>=1.9.0",
    "pytest-asyncio>=0.23.5.post1",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tifa"]
