[tool.poetry]
name = "tifa"
version = "0.1.0"
description = ""
authors = ["twocucao <twocucao@gmail.com>"]
include = ["tifa/templates/", "tifa/static/"]

[[tool.poetry.source]]
name = "tencent"
url = 'https://mirrors.cloud.tencent.com/pypi/simple'
priority = 'primary'

[tool.poetry.dependencies]
python = "^3.11"
ipython = "*"
markdown = "*"
xlsxwriter = "*"
xlwt = "*"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
typer = "*"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
aiofiles = "*"
orjson = "*"
python-dotenv = "^1.0.1"
aioredis = "*"
aiokafka = "*"
devtools = "*"
jinja2 = "*"
requests = "^2.25.1"
aiohttp = "^3.7.4"
celery = "^5.3.1"
gunicorn = "*"
pandas = "*"
pillow = "*"
qrcode = "^7.1"
raven = "^6.10.0"
redis = "^3.5.3"
tenacity = "^7.0.0"
xlrd = "^2.0.1"
pymysql = "^1.1.0"
aiobotocore = "^2.12.1"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
aiomysql = "^0.2.0"

[tool.poetry.dev-dependencies]
coverage = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
pytest-asyncio = "^0.15.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.poetry.scripts]
fastcli = 'tifa.cli:cli'
tifa-cli = 'tifa.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
